app/infra/discovery/k8s/deployment-public.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-backend-deployment
spec:
  selector:
    matchLabels:
      app: discovery-backend
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: discovery-backend
    spec:
      containers:
        - name: discovery-backend
          image: registry.cn-shenzhen.aliyuncs.com/angrymiao/rep:discovery-backend-1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 7171
