app/infra/discovery/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-backend-deployment
spec:
  selector:
    matchLabels:
      app: discovery-backend
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: discovery-backend
    spec:
      containers:
        - name: discovery-backend
          image: registry-vpc.cn-shenzhen.aliyuncs.com/angrymiao/stellar:discovery-backend-{DRONE_BUILD_NUMBER}
          imagePullPolicy: Always
          ports:
            - containerPort: 7171
