app/infra/discovery/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discovery-backend-service
spec:
  selector:
    app: discovery-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7171
